appId: com.nxtvibes.mobile
---
- assertVisible: "Complete your profile"
- tapOn: "Your full name"
- inputText: "Maestro Tester"
- tapOn: "username"
# Delete existing text if any before typing
- eraseText: 20
- inputText: "maestro_test123"
- tapOn: "Male"
- scroll
- tapOn: "Tell people about yourself..."
- inputText: "I am an automated tester navigating the world."
- tapOn: "Submit"
- assertVisible: "NxtVibes" # Verifying successful redirection to Feed
